# fwm

./: .gitignore  CMakeLists.txt  flash.sh
fw/: CMakeLists.txt  main.cpp
fw/hal/: CMakeLists.txt
fw/hal/hw_uart/: CMakeLists.txt  hw_uart.cpp  hw_uart.hpp
fw/hal/leds/: CMakeLists.txt  leds.cpp  leds.hpp
fw/log/: CMakeLists.txt  log.hpp  logger.cpp  logger.hpp
