cmake_minimum_required(VERSION 3.16)


set(MSP_TOOLCHAIN "${CMAKE_SOURCE_DIR}/msp430-gcc")
set(MSP_INCLUDE "${MSP_TOOLCHAIN}/include")
set(MSP_BIN "${MSP_TOOLCHAIN}/bin")

set(DEVICE msp430g2553)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_COMPILER "${MSP_BIN}/msp430-elf-g++")
set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mmcu=${DEVICE} -Wall -Werror")




project(msp430)

add_subdirectory(fw)


